 - added a strength-parameter to Quick mutation (which currently works not very predictable/well)
 - new option to disable ai-based post-denoisers on GPU renders, but to keep the settings for CPU renders at the same time

 - improved the "Duckies"-random-flame-generator
 - new variations:
   - ovoid by Rob Richards
   - post_point_crop by Whittaker Courtney
   - hole
   - post_flatten and pre_flatten
   - pre_disc
   - post_rotate_z
   - oak_leaf
   - maple_leaf
   - japanese_maple_leaf

  - new family of variations by Jesus Sosa: Symmetries band & network groups variations
     - Symmetry Band Groups 1 to 7 variations: sym_bg1, sym_bg2, sym_bg3, sym_bg4, sym_bg5, sym_bg6, sym_bg7
     - Symmetry Network Group 1 to 17 variations: sym_ng1, sym_ng2, sym_ng3, sym_ng4, sym_ng5, sym_ng6, sym_ng7, sym_ng8, sym_ng9, sym_ng10,
       sym_ng11, sym_ng12, sym_ng13, sym_ng14, sym_ng15, sym_ng16, sym_ng17.

 - behaviour of some variations fixed: the contribution of these was not added to the variation current group, but
   was overriding all other contributions of the current group:
     - seashell3D
     - clifford_js
     - post_depth
 - fixed the naming of some parameters (i.e., replaced spaces by underscore) of the following variations:
     - atan2_spirals
     - seashell3D
     - inverted_julia variation
     - corners
 - fixed the following variations in order to correctly support the "Preserve Z"-setting:
     - bsplit
 - fixed a bad behaviour of the dinis_surface_wf variation
 - the parameter "filled" of the following variations is now a probability, rather than a switch:
     - cannabiscurve_wf
     - cloverleaf_wf
     - rose_wf
 - changed the initialization behaviour of the w-, x-, y- and z-variation: lituus is initialized to 0 instead to a random number
 - changed the behaviour of post_axis_symmetry_wf and post_mirror_wf so that it only adds a contribution when the amount-parameter is not equal to zero, for consistency reasons